objects/CSS_AdminSRT_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Add__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SRT_CODE__c</fullName>
        <label>SRT CODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Description__c</fullName>
        <label>SRT Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SRT_Time__c</fullName>
        <label>SRT Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CSS AdminSRT Details</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Add__c</columns>
        <columns>Notes__c</columns>
        <columns>SRT_CODE__c</columns>
        <columns>SRT_Description__c</columns>
        <columns>SRT_Time__c</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>